--- a/(2020) Plagiarism/01. Confession of a plagiarist.md
+++ b/(2020) Plagiarism/01. Confession of a plagiarist.md
@@ -1,4 +1,16 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-音楽泥棒の自白 | Ongaku Dorobou no Jihaku
+音楽泥棒の自白 | Ongaku Dorobou no Jihaku | Lời tự bạch của tên trộm âm nhạc
+
+> [!Vietnamese]-
+> “Ta là một tên trộm.
+> Từ cổ chí kim, trộm thì muôn hình muôn vẻ, nhưng ta thì khác với bọn họ.
+> Ta không ăn trộm tiền, cũng chẳng hứng thú với trang sức cổ hay các loại mỹ thuật có giá trị khác.
+> Ta, là một kẻ đi ăn trộm âm thanh.
+> 
+> Những bản nhạc jazz standard phát ra từ radio. Những bài pop nghe từ loa trên phố. Tiếng hát vọng đến vòng xuyến trước nhà ga. Bản piano sonata truyền đến từ khán phòng nhỏ trong hội trường thành phố.
+> 
+> Ta ăn trộm những thứ đó. Ta ghi âm chúng lại bằng chiếc máy thu âm cũ kỹ này rồi ăn trộm nó. Ta huýt sáo để ăn trộm. Ta ghi nó ra bản nhạc để ăn trộm.
+> 
+> Từ xưa ta đã yêu tha thiết những giai điệu đẹp đẽ.
